infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: morder-depl
spec:
  replicas: 1
  selector:
      matchLabels:
        app: morder
  template:
    metadata:
        labels:
            app: morder 
    spec:
      containers:
          - name: morder
            image: tohshine/morder
            
---
apiVersion: v1
kind: Service
metadata:
   name: morder-srv
spec:
   selector:
    app: morder
   ports:
    - name: morder
      protocol: TCP
      port: 3000
      targetPort: 3000
