infra/k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mproduct-depl
spec:
  replicas: 1
  selector:
      matchLabels:
        app: mproduct
  template:
    metadata:
        labels:
            app: mproduct
    spec:
      containers:
          - name: mproduct
            image: tohshine/mproduct
            
---
apiVersion: v1
kind: Service
metadata:
   name: mproduct-srv
spec:
   selector:
    app: mproduct
   ports:
    - name: mproduct
      protocol: TCP
      port: 3000
      targetPort: 3000
