infra/k8s/profile-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mprofile-depl
spec:
  replicas: 1
  selector:
      matchLabels:
        app: mprofile
  template:
    metadata:
        labels:
            app: mprofile
    spec:
      containers:
          - name: mprofile
            image: tohshine/mprofile
            
---
apiVersion: v1
kind: Service
metadata:
   name: mprofile-srv
spec:
   selector:
    app: mprofile
   ports:
    - name: mprofile
      protocol: TCP
      port: 3000
      targetPort: 3000
